--- a/frontend/styles/output.css
+++ b/frontend/styles/output.css
@@ -32,16 +32,10 @@
     --color-teal-500: oklch(0.704 0.14 182.503);
     --color-teal-600: oklch(0.6 0.118 184.704);
     --color-blue-50: oklch(0.97 0.014 254.604);
-    --color-blue-100: oklch(0.932 0.032 255.585);
-    --color-blue-300: oklch(0.809 0.105 251.813);
     --color-blue-400: oklch(0.707 0.165 254.624);
-    --color-blue-500: oklch(0.623 0.214 259.815);
     --color-blue-600: oklch(0.546 0.245 262.881);
     --color-blue-700: oklch(0.488 0.243 264.376);
     --color-blue-900: oklch(0.379 0.146 265.522);
-    --color-indigo-100: oklch(0.93 0.034 272.788);
-    --color-purple-50: oklch(0.977 0.014 308.299);
-    --color-purple-500: oklch(0.627 0.265 303.9);
     --color-slate-50: oklch(0.984 0.003 247.858);
     --color-slate-100: oklch(0.968 0.007 247.896);
     --color-slate-200: oklch(0.929 0.013 255.508);
@@ -64,7 +58,6 @@
     --color-white: #fff;
     --spacing: 0.25rem;
     --container-xs: 20rem;
-    --container-xl: 36rem;
     --container-2xl: 42rem;
     --container-3xl: 48rem;
     --container-5xl: 64rem;
@@ -293,20 +286,8 @@
   .-top-5 {
     top: calc(var(--spacing) * -5);
   }
-  .-top-7 {
-    top: calc(var(--spacing) * -7);
-  }
   .-top-8 {
     top: calc(var(--spacing) * -8);
-  }
-  .-top-9 {
-    top: calc(var(--spacing) * -9);
-  }
-  .-top-10 {
-    top: calc(var(--spacing) * -10);
-  }
-  .-top-14 {
-    top: calc(var(--spacing) * -14);
   }
   .top-0 {
     top: calc(var(--spacing) * 0);
@@ -536,12 +517,6 @@
   .my-48 {
     margin-block: calc(var(--spacing) * 48);
   }
-  .my-\[250px\] {
-    margin-block: 250px;
-  }
-  .my-\[500px\] {
-    margin-block: 500px;
-  }
   .my-auto {
     margin-block: auto;
   }
@@ -575,9 +550,6 @@
   .mt-20 {
     margin-top: calc(var(--spacing) * 20);
   }
-  .mt-44 {
-    margin-top: calc(var(--spacing) * 44);
-  }
   .mt-48 {
     margin-top: calc(var(--spacing) * 48);
   }
@@ -586,12 +558,6 @@
   }
   .mt-\[350px\] {
     margin-top: 350px;
-  }
-  .mt-\[500px\] {
-    margin-top: 500px;
-  }
-  .mt-\[1000px\] {
-    margin-top: 1000px;
   }
   .mr-2 {
     margin-right: calc(var(--spacing) * 2);
@@ -742,9 +708,6 @@
     width: 100%;
     height: 100%;
   }
-  .h-2 {
-    height: calc(var(--spacing) * 2);
-  }
   .h-4 {
     height: calc(var(--spacing) * 4);
   }
@@ -853,9 +816,6 @@
   .w-1\/4 {
     width: calc(1/4 * 100%);
   }
-  .w-2 {
-    width: calc(var(--spacing) * 2);
-  }
   .w-2xl {
     width: var(--container-2xl);
   }
@@ -870,9 +830,6 @@
   }
   .w-5 {
     width: calc(var(--spacing) * 5);
-  }
-  .w-5xl {
-    width: var(--container-5xl);
   }
   .w-11 {
     width: calc(var(--spacing) * 11);
@@ -976,9 +933,6 @@
   .max-w-11\/12 {
     max-width: calc(11/12 * 100%);
   }
-  .max-w-56 {
-    max-width: calc(var(--spacing) * 56);
-  }
   .max-w-\[90\%\] {
     max-width: 90%;
   }
@@ -993,12 +947,6 @@
   }
   .max-w-full {
     max-width: 100%;
-  }
-  .max-w-xl {
-    max-width: var(--container-xl);
-  }
-  .min-w-36 {
-    min-width: calc(var(--spacing) * 36);
   }
   .min-w-52 {
     min-width: calc(var(--spacing) * 52);
@@ -1057,24 +1005,12 @@
     --tw-translate-x: calc(calc(1/2 * 100%) * -1);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
-  .-translate-y-1 {
-    --tw-translate-y: calc(var(--spacing) * -1);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .-translate-y-1\/4 {
-    --tw-translate-y: calc(calc(1/4 * 100%) * -1);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
   .-translate-y-3 {
     --tw-translate-y: calc(var(--spacing) * -3);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .-translate-y-3\/4 {
     --tw-translate-y: calc(calc(3/4 * 100%) * -1);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .-translate-y-20 {
-    --tw-translate-y: calc(var(--spacing) * -20);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .-translate-y-52 {
@@ -1089,20 +1025,8 @@
     --tw-translate-y: calc(1% * -1);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
-  .-translate-y-\[10\%\] {
-    --tw-translate-y: calc(10% * -1);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
   .-translate-y-\[150\%\] {
     --tw-translate-y: calc(150% * -1);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .-translate-y-full {
-    --tw-translate-y: -100%;
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .translate-y-0 {
-    --tw-translate-y: calc(var(--spacing) * 0);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .translate-y-1 {
@@ -1129,10 +1053,6 @@
     --tw-translate-y: calc(3/4 * 100%);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
-  .translate-y-10 {
-    --tw-translate-y: calc(var(--spacing) * 10);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
   .translate-y-\[8\%\] {
     --tw-translate-y: 8%;
     translate: var(--tw-translate-x) var(--tw-translate-y);
@@ -1141,20 +1061,8 @@
     --tw-translate-y: 65%;
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
-  .translate-y-\[75\%\] {
-    --tw-translate-y: 75%;
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
   .translate-y-\[125\%\] {
     --tw-translate-y: 125%;
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .translate-y-\[150\%\] {
-    --tw-translate-y: 150%;
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .translate-y-\[200\%\] {
-    --tw-translate-y: 200%;
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .translate-y-full {
@@ -1287,13 +1195,6 @@
   .gap-8 {
     gap: calc(var(--spacing) * 8);
   }
-  .space-y-1 {
-    :where(& > :not(:last-child)) {
-      --tw-space-y-reverse: 0;
-      margin-block-start: calc(calc(var(--spacing) * 1) * var(--tw-space-y-reverse));
-      margin-block-end: calc(calc(var(--spacing) * 1) * calc(1 - var(--tw-space-y-reverse)));
-    }
-  }
   .space-y-2 {
     :where(& > :not(:last-child)) {
       --tw-space-y-reverse: 0;
@@ -1335,13 +1236,6 @@
   }
   .gap-x-10 {
     column-gap: calc(var(--spacing) * 10);
-  }
-  .space-x-2 {
-    :where(& > :not(:last-child)) {
-      --tw-space-x-reverse: 0;
-      margin-inline-start: calc(calc(var(--spacing) * 2) * var(--tw-space-x-reverse));
-      margin-inline-end: calc(calc(var(--spacing) * 2) * calc(1 - var(--tw-space-x-reverse)));
-    }
   }
   .space-x-4 {
     :where(& > :not(:last-child)) {
@@ -1496,9 +1390,6 @@
   .bg-gray-100 {
     background-color: var(--color-gray-100);
   }
-  .bg-gray-300 {
-    background-color: var(--color-gray-300);
-  }
   .bg-green-600 {
     background-color: var(--color-green-600);
   }
@@ -1583,10 +1474,6 @@
     --tw-gradient-from: var(--color-emerald-600);
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
   }
-  .from-indigo-100 {
-    --tw-gradient-from: var(--color-indigo-100);
-    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
-  }
   .from-transparent {
     --tw-gradient-from: transparent;
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
@@ -1596,11 +1483,6 @@
   }
   .via-\[\#16C47F\] {
     --tw-gradient-via: #16C47F;
-    --tw-gradient-via-stops: var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-via) var(--tw-gradient-via-position), var(--tw-gradient-to) var(--tw-gradient-to-position);
-    --tw-gradient-stops: var(--tw-gradient-via-stops);
-  }
-  .via-purple-50 {
-    --tw-gradient-via: var(--color-purple-50);
     --tw-gradient-via-stops: var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-via) var(--tw-gradient-via-position), var(--tw-gradient-to) var(--tw-gradient-to-position);
     --tw-gradient-stops: var(--tw-gradient-via-stops);
   }
@@ -1616,24 +1498,12 @@
     --tw-gradient-to: #16C47F;
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
   }
-  .to-blue-100 {
-    --tw-gradient-to: var(--color-blue-100);
-    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
-  }
-  .to-emerald-300 {
-    --tw-gradient-to: var(--color-emerald-300);
-    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
-  }
   .to-emerald-400 {
     --tw-gradient-to: var(--color-emerald-400);
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
   }
   .to-green-50 {
     --tw-gradient-to: var(--color-green-50);
-    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
-  }
-  .to-purple-500 {
-    --tw-gradient-to: var(--color-purple-500);
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
   }
   .to-teal-500 {
@@ -1835,9 +1705,6 @@
   .text-\[11px\] {
     font-size: 11px;
   }
-  .text-\[14px\] {
-    font-size: 14px;
-  }
   .text-\[50px\] {
     font-size: 50px;
   }
@@ -1863,12 +1730,6 @@
   }
   .break-all {
     word-break: break-all;
-  }
-  .text-blue-300 {
-    color: var(--color-blue-300);
-  }
-  .text-blue-500 {
-    color: var(--color-blue-500);
   }
   .text-blue-600 {
     color: var(--color-blue-600);
@@ -2694,22 +2555,6 @@
       }
     }
   }
-  .hover\:from-emerald-300 {
-    &:hover {
-      @media (hover: hover) {
-        --tw-gradient-from: var(--color-emerald-300);
-        --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
-      }
-    }
-  }
-  .hover\:from-emerald-400 {
-    &:hover {
-      @media (hover: hover) {
-        --tw-gradient-from: var(--color-emerald-400);
-        --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
-      }
-    }
-  }
   .hover\:from-emerald-700 {
     &:hover {
       @media (hover: hover) {
@@ -2722,22 +2567,6 @@
     &:hover {
       @media (hover: hover) {
         --tw-gradient-from-position: 60%;
-      }
-    }
-  }
-  .hover\:to-emerald-500 {
-    &:hover {
-      @media (hover: hover) {
-        --tw-gradient-to: var(--color-emerald-500);
-        --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
-      }
-    }
-  }
-  .hover\:to-emerald-600 {
-    &:hover {
-      @media (hover: hover) {
-        --tw-gradient-to: var(--color-emerald-600);
-        --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
       }
     }
   }
@@ -2798,11 +2627,6 @@
       }
     }
   }
-  .focus\:border-blue-500 {
-    &:focus {
-      border-color: var(--color-blue-500);
-    }
-  }
   .focus\:border-emerald-500 {
     &:focus {
       border-color: var(--color-emerald-500);
@@ -2814,11 +2638,6 @@
       box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
     }
   }
-  .focus\:ring-blue-500 {
-    &:focus {
-      --tw-ring-color: var(--color-blue-500);
-    }
-  }
   .focus\:ring-emerald-500 {
     &:focus {
       --tw-ring-color: var(--color-emerald-500);
@@ -2827,11 +2646,6 @@
   .focus\:ring-slate-300 {
     &:focus {
       --tw-ring-color: var(--color-slate-300);
-    }
-  }
-  .focus\:ring-slate-500 {
-    &:focus {
-      --tw-ring-color: var(--color-slate-500);
     }
   }
   .focus\:ring-offset-2 {
@@ -2939,14 +2753,14 @@
       left: calc(var(--spacing) * 10);
     }
   }
-  .lg\:my-48 {
+  .lg\:m-0 {
     @media (width >= 64rem) {
-      margin-block: calc(var(--spacing) * 48);
+      margin: calc(var(--spacing) * 0);
     }
   }
-  .lg\:mt-10 {
+  .lg\:m-10 {
     @media (width >= 64rem) {
-      margin-top: calc(var(--spacing) * 10);
+      margin: calc(var(--spacing) * 10);
     }
   }
   .lg\:block {
@@ -2974,9 +2788,27 @@
       max-width: calc(11/12 * 100%);
     }
   }
+  .lg\:-translate-y-1\/4 {
+    @media (width >= 64rem) {
+      --tw-translate-y: calc(calc(1/4 * 100%) * -1);
+      translate: var(--tw-translate-x) var(--tw-translate-y);
+    }
+  }
   .lg\:-translate-y-3\/4 {
     @media (width >= 64rem) {
       --tw-translate-y: calc(calc(3/4 * 100%) * -1);
+      translate: var(--tw-translate-x) var(--tw-translate-y);
+    }
+  }
+  .lg\:translate-y-0 {
+    @media (width >= 64rem) {
+      --tw-translate-y: calc(var(--spacing) * 0);
+      translate: var(--tw-translate-x) var(--tw-translate-y);
+    }
+  }
+  .lg\:translate-y-1\/4 {
+    @media (width >= 64rem) {
+      --tw-translate-y: calc(1/4 * 100%);
       translate: var(--tw-translate-x) var(--tw-translate-y);
     }
   }
@@ -2999,6 +2831,11 @@
   .lg\:bg-transparent {
     @media (width >= 64rem) {
       background-color: transparent;
+    }
+  }
+  .lg\:pb-10 {
+    @media (width >= 64rem) {
+      padding-bottom: calc(var(--spacing) * 10);
     }
   }
   .lg\:before\:block {
